# rubik

./: .clang-format  .clang_complete  .gitignore  CMakeLists.txt  CliOptParser.cpp  CliOptParser.hpp  Database.cpp  Database.hpp  Display.cpp  Display.hpp  Encoding.hpp  Heuristics.cpp  Heuristics.hpp  Makefile  Move.cpp  Move.hpp  OptParser.cpp  OptParser.hpp  Parser.cpp  Parser.hpp  Result.hpp  Solver.cpp  Solver.hpp  State.cpp  State.hpp  State_Const.cpp  State_Encoding.cpp  State_Header.cpp  TODO.txt  Tests.cpp  Tests.hpp  ThreadPool.hpp  Types.cpp  Types.hpp  a.out  auteur  cmake_install.cmake  fuck.txt  main.cpp  npuzzle  (+5 more)
old/: Encoding.cpp  Generator.cpp  Generator.hpp  GridPoint.cpp  GridPoint.hpp  IDAStar.cpp  Parser.cpp  Parser.hpp  ThreadPool.hpp  mains.cpp
rubik.dSYM/Contents/: Info.plist
rubik.dSYM/Contents/Resources/DWARF/: rubik
tests/: build.sh  error.sh  test_0.05.sh  test_50.sh  test_7.sh
